<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/time_new_activity"
        android:text="Time Needed = "
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <EditText
      android:id="@+id/buffer"
      android:hint="Buffer"
      android:gravity="center_horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number"/>

    <Button
      android:id="@+id/calculate_buffer"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:text="@string/calculate"
      android:onClick="calculate"/>
</LinearLayout>

